bld/wipfc/test/neg/neg9.ipf
:userdoc.
:title.Negative 9
:docprof.
:h1.Syntax error
:artwork name="not_present.bmp" :q.The file&per.
:euserdoc.
